# waterloo

./: README.md  USER_GUIDE.md  pyproject.toml
.waterloo-data/: waterloo.db
src/waterloo/: __init__.py  __main__.py  agent_loop.py  cli.py  config.py  llm_tools.py  logging_utils.py  memory.py  router.py  tool_executor.py  tools.py
src/waterloo/connectors/: __init__.py  base.py  calendar_ics.py  mail_stub.py
src/waterloo/providers/: __init__.py  base.py  ollama.py  openai_provider.py  parse.py  types.py
tests/: test_calendar_ics.py  test_config.py  test_llm_agent.py  test_logging_utils.py  test_memory.py  test_router.py  test_tools.py
